# osit_data_prompts

./: #radiosvoboda_articles.docx  20250307. METHODOLOGY. СХЕМЫ. 02.docx  pyproject.toml
src/: main.py
src/core/: categorizator.py
src/core/ai/: __init__.py  models.py  prompts.py
src/core/arma/: arma_crawler.py
src/core/bihus_info/: bihus_crawler.py  consts.py
src/core/hromadske/: consts.py  hromadske_crawler.py
src/core/nashi_groshi/: consts.py  nashi_groshi_crawler.py
src/core/prot_corruption_shabunin/: consts.py  prompt_corup_crawler.py
src/core/shemy_radio_svoboda/: consts.py  shemy_crawler.py
src/core/ukr_pravda/: consts.py  (+1 more)
src/data/: 20250305. КОРРУПЦИОННЫЕ СХЕМЫ (1).docx  antac_news_data.json  bihus_news_data.json  hromadske_news.json  nashi_groshi.json  radiosvoboda_articles.json  ukr_pravda_data.json  ukr_pravda_data_02_03.json  ukr_pravda_data_03_03.json  ukr_pravda_data_05_03.json  ukr_pravda_data_06_03.json
src/output_chunks_antac_news_data/: output_chunk_1.json  output_chunk_10.json  output_chunk_11.json  output_chunk_12.json  output_chunk_13.json  output_chunk_14.json  output_chunk_15.json  output_chunk_16.json  output_chunk_2.json  output_chunk_3.json  output_chunk_4.json  output_chunk_5.json  output_chunk_6.json  output_chunk_7.json  output_chunk_8.json  output_chunk_9.json
src/output_chunks_nashi_groshi/: output_chunk_1.json  output_chunk_10.json  output_chunk_2.json  output_chunk_3.json  output_chunk_4.json  output_chunk_5.json  output_chunk_6.json  output_chunk_7.json  output_chunk_8.json  output_chunk_9.json
(+124 files in other folders)
