[tool.poetry]
name = "news-categorizer"
version = "0.1.0"
description = ""
authors = ["mborodada <mboroda@lytvynov-production.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
bs4 = "^0.0.2"
loguru = "^0.7.3"
helium = "^5.1.1"
pydantic = "^2.10.6"
python-docx = "^1.1.2"
tiktoken = "^0.9.0"
playwright = "^1.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
